changed ptm page

--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -272,7 +272,7 @@ sudo make install
   <tr>
     <th rowspan="1">HDD temperature label</th>
     <td><code>@@/dev/sda@@</code></td>
-    <td><p align="justify">HDD (<code>/dev/sda</code> in example) temperature, &deg;C, <code>----</code>. <code>hddtemp</code> must be installed.</p></td>
+    <td><p align="justify">HDD (<code>/dev/sda</code> in example) temperature, &deg;C, <code>----</code>. Separator for devices list is <code>;</code>, for example <code>@@/dev/sda;/dev/sdb@@</code>. <code>hddtemp</code> must be installed.</p></td>
   </tr>
   <tr>
     <th rowspan="3">Network label</th>
