--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -272,7 +272,7 @@ sudo make install
   <tr>
     <th rowspan="1">Температура HDD</th>
     <td><code>@@/dev/sda@@</code></td>
-    <td><p align="justify">Температура HDD (<code>/dev/sda</code> в примере), &deg;C, <code>----</code>. <code>hddtemp</code> должен быть установлен.</p></td>
+    <td><p align="justify">Температура HDD (<code>/dev/sda</code> в примере), &deg;C, <code>----</code>. Разделитель <code>;</code>, например <code>@@/dev/sda;/dev/sdb@@</code>. <code>hddtemp</code> должен быть установлен.</p></td>
   </tr>
   <tr>
     <th rowspan="3">Сеть</th>
