--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -350,6 +350,9 @@ sudo make install
 <p align="justify"><b>Music player:</b> Select one of supported music playes for player label.</p>
 
 <p align="justify"><b>Custom command:</b> <i><b>NOTE</b> this label may cause the computer freeze.</i> A command, which will be run for custom label. For example, <code>wget -qO- http://ifconfig.me/ip</code> will return external IP.</p>
+
+<h4><a name="tooltips" class="anchor" href="#tooltips"><span class="octicon octicon-link"></span></a>Tooltips</h4>
+<p align="justify">Since version 1.7.0 CPU, CPU clock, memory, swap and network labels support graphical tooltip. To enable them just make the needed checkboxes a fully checked. The number of stored values can be set in the tab. Colors of graphs are configurable too.</p>
 <!-- end of config block -->
 
 <!-- gui block -->
